feat(TMID-387): added unit tests..